--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Odin Etch a Sketch</h1>
-        <button type="button">Set Size</button>
+        <button type="button" id="resizeButton">Set Size</button>
         <div class ="grid"></div>
     </body>
 </html>
