Add ability to shade with random colors

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     </head>
     <body>
         <h1>Odin Etch a Sketch</h1>
-        <button type="button" id="resizeButton">Set Size</button>
+        <button type ="button" id = "resizeButton">Set Size</button>
+        <div class ="colorOptions">
+            <button type ="button" id = "buttonBW">BW</button>
+            <button type ="button" id = "buttonRandomColor">RGB</button>
+            <button type ="button" id = "buttonOpacity">Opacity</button>
+        </div>
         <div class ="grid"></div>
     </body>
 </html>
