Add opacity transition option

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <h1>Odin Etch a Sketch</h1>
         <button type ="button" id = "resizeButton">Set Size</button>
         <div class ="colorOptions">
-            <button type ="button" id = "buttonBW">BW</button>
+            <button type ="button" id = "buttonBW">White to Black</button>
             <button type ="button" id = "buttonRandomColor">RGB</button>
-            <button type ="button" id = "buttonOpacity">Opacity</button>
+            <button type ="button" id = "buttonOpacity">White Increment to Black</button>
         </div>
         <div class ="grid"></div>
     </body>
